[Lutron] Add enhanced keypad and VCRX Support (#3787)
* Add enhanced keypad support for seeTouch, Pico, VCRX, and main repeater integration buttons
* Add CCO and CCI support
* Add auto-discovery support for additional RadioRA2 devices/device modes
* Declare logger as final & remove this keyword from logger calls in all RA2 code

Closes #3778
Fixes #3234

Signed-off-by: Bob Adair <bob.github@att.net> (github: bobadair)
Signed-off-by: Arjen Korevaar <a.korevaar@mephix.com>